getting top states

--- a/danimap.ipynb
+++ b/danimap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d92c030f-6ffa-4067-9eaf-f749fe2049bd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e24565be-6baa-4ee4-97c5-436fad7bef72",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "[3151 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2ec6f562-3534-43ee-ac2a-6c01a4e7555f",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b268b764-262e-4379-aa45-a466484fce3b",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "[67 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6008f928-3b7e-4d8a-a39e-b42c5e5d1338",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a4daf047-6dfb-43d5-8054-78b250b2509b",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vk/kfflzmxs1ssf_t7swsphkgd00000gn/T/ipykernel_17402/88707711.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/vk/kfflzmxs1ssf_t7swsphkgd00000gn/T/ipykernel_22224/88707711.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "01f20bfb-2796-4442-9212-029e1aeb8bcc",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "[3076 rows x 8 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7e6d88ed-8cd7-4eeb-84a6-62761039b115",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c442fefd-0d33-4ff9-86c7-332f5cca86b3",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1bff4b53",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
        "[329726 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "689ad058",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "96e8ec67",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "4cb518cc",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1426,7 @@
        "50               Wyoming         WY       West            Mountain"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7c49fc3b",
    "metadata": {},
    "outputs": [
@@ -1991,7 +1991,7 @@
        "50        7.282609  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a059ed3f",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "01085c83",
    "metadata": {},
    "outputs": [
@@ -2064,7 +2064,7 @@
     "import matplotlib.pyplot as plt\n",
     "#\n",
     "# Load the US state shapefile\n",
-    "gdf_states = gpd.read_file('/cb_2022_us_state_500k/cb_2022_us_state_500k.shp')\n",
+    "gdf_states = gpd.read_file('cb_2022_us_state_500k/cb_2022_us_state_500k.shp')\n",
     "\n",
     "# Merge with your data\n",
     "gdf_states = gdf_states.merge(joined, how='left', left_on='STUSPS', right_on='State Code')\n",
@@ -2105,7 +2105,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
+   "id": "d3d476de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>State</th>\n",
+       "      <th>CountyFIPS</th>\n",
+       "      <th>Percentage</th>\n",
+       "      <th>Lower Limit</th>\n",
+       "      <th>Upper Limit</th>\n",
+       "      <th>no_percentage</th>\n",
+       "      <th>Percentage_int</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Teton County</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>56039</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Gallatin County</td>\n",
+       "      <td>Montana</td>\n",
+       "      <td>30031</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>San Juan County</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53055</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Summit County</td>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>8117</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Blaine County</td>\n",
+       "      <td>Idaho</td>\n",
+       "      <td>16013</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             County       State  CountyFIPS Percentage Lower Limit  \\\n",
+       "75     Teton County     Wyoming       56039        4.4         3.1   \n",
+       "76  Gallatin County     Montana       30031        4.7         3.5   \n",
+       "77  San Juan County  Washington       53055        4.7         3.2   \n",
+       "78    Summit County    Colorado        8117        5.1         3.5   \n",
+       "79    Blaine County       Idaho       16013        5.1         3.6   \n",
+       "\n",
+       "    Upper Limit  no_percentage  Percentage_int  \n",
+       "75            6          False             4.4  \n",
+       "76            6          False             4.7  \n",
+       "77          6.1          False             4.7  \n",
+       "78          7.2          False             5.1  \n",
+       "79            7          False             5.1  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#top 3 states vs lowest 3 states\n",
+    "d_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "150eae51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "790bdaac",
    "metadata": {},
    "outputs": [
@@ -2177,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a760278e",
    "metadata": {},
    "outputs": [
@@ -2289,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0adab3b5",
    "metadata": {},
    "outputs": [
@@ -2412,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "9a95b160",
    "metadata": {},
    "outputs": [
@@ -2615,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d2aa43be",
    "metadata": {},
    "outputs": [
@@ -2832,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "5c107b25",
    "metadata": {},
    "outputs": [
