--- a/danimap.ipynb
+++ b/danimap.ipynb
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "d3d476de",
    "metadata": {},
    "outputs": [
@@ -2216,14 +2216,401 @@
        "79            7          False             5.1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#top 3 states vs lowest 3 states\n",
-    "d_test.head()"
+    "d_test.head()\n",
+    "# county_info = pd.read_csv('county_info.csv')\n",
+    "# county_info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1e09032d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GeoFIPS</th>\n",
+       "      <th>GeoName</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>TableName</th>\n",
+       "      <th>LineCode</th>\n",
+       "      <th>IndustryClassification</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>1969</th>\n",
+       "      <th>1970</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "      <th>2023</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>\"00000\"</td>\n",
+       "      <td>United States</td>\n",
+       "      <td></td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>201298000</td>\n",
+       "      <td>203798722</td>\n",
+       "      <td>...</td>\n",
+       "      <td>319257560</td>\n",
+       "      <td>321815121</td>\n",
+       "      <td>324353340</td>\n",
+       "      <td>326608609</td>\n",
+       "      <td>328529577</td>\n",
+       "      <td>330226227</td>\n",
+       "      <td>331526933</td>\n",
+       "      <td>332048977</td>\n",
+       "      <td>333271411</td>\n",
+       "      <td>334914895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>\"01000\"</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>3440000</td>\n",
+       "      <td>3449846</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4887757</td>\n",
+       "      <td>4909177</td>\n",
+       "      <td>4931579</td>\n",
+       "      <td>4953096</td>\n",
+       "      <td>4977088</td>\n",
+       "      <td>5003778</td>\n",
+       "      <td>5031864</td>\n",
+       "      <td>5050380</td>\n",
+       "      <td>5073903</td>\n",
+       "      <td>5108468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>\"01001\"</td>\n",
+       "      <td>Autauga, AL</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>25166</td>\n",
+       "      <td>24606</td>\n",
+       "      <td>...</td>\n",
+       "      <td>56062</td>\n",
+       "      <td>56311</td>\n",
+       "      <td>56979</td>\n",
+       "      <td>57393</td>\n",
+       "      <td>57747</td>\n",
+       "      <td>58251</td>\n",
+       "      <td>58915</td>\n",
+       "      <td>59203</td>\n",
+       "      <td>59726</td>\n",
+       "      <td>60342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>\"01003\"</td>\n",
+       "      <td>Baldwin, AL</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>56951</td>\n",
+       "      <td>59474</td>\n",
+       "      <td>...</td>\n",
+       "      <td>200910</td>\n",
+       "      <td>205083</td>\n",
+       "      <td>210148</td>\n",
+       "      <td>215475</td>\n",
+       "      <td>221187</td>\n",
+       "      <td>227057</td>\n",
+       "      <td>233227</td>\n",
+       "      <td>239439</td>\n",
+       "      <td>246531</td>\n",
+       "      <td>253507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>\"01005\"</td>\n",
+       "      <td>Barbour, AL</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>23818</td>\n",
+       "      <td>22655</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27012</td>\n",
+       "      <td>26600</td>\n",
+       "      <td>26186</td>\n",
+       "      <td>25585</td>\n",
+       "      <td>25359</td>\n",
+       "      <td>25187</td>\n",
+       "      <td>24969</td>\n",
+       "      <td>24533</td>\n",
+       "      <td>24700</td>\n",
+       "      <td>24585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73492</th>\n",
+       "      <td>\"94000\"</td>\n",
+       "      <td>Plains</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>16202000</td>\n",
+       "      <td>16349829</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21050417</td>\n",
+       "      <td>21166271</td>\n",
+       "      <td>21274183</td>\n",
+       "      <td>21381319</td>\n",
+       "      <td>21474484</td>\n",
+       "      <td>21561894</td>\n",
+       "      <td>21624720</td>\n",
+       "      <td>21662785</td>\n",
+       "      <td>21684718</td>\n",
+       "      <td>21763244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73515</th>\n",
+       "      <td>\"95000\"</td>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>43440000</td>\n",
+       "      <td>43973515</td>\n",
+       "      <td>...</td>\n",
+       "      <td>81195505</td>\n",
+       "      <td>81974049</td>\n",
+       "      <td>82827343</td>\n",
+       "      <td>83580932</td>\n",
+       "      <td>84228691</td>\n",
+       "      <td>84843217</td>\n",
+       "      <td>85429296</td>\n",
+       "      <td>85951399</td>\n",
+       "      <td>86798522</td>\n",
+       "      <td>87677050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73538</th>\n",
+       "      <td>\"96000\"</td>\n",
+       "      <td>Southwest</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>16328000</td>\n",
+       "      <td>16621375</td>\n",
+       "      <td>...</td>\n",
+       "      <td>39499579</td>\n",
+       "      <td>40097127</td>\n",
+       "      <td>40635623</td>\n",
+       "      <td>41082659</td>\n",
+       "      <td>41504141</td>\n",
+       "      <td>41978057</td>\n",
+       "      <td>42504766</td>\n",
+       "      <td>42942357</td>\n",
+       "      <td>43528279</td>\n",
+       "      <td>44102840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73561</th>\n",
+       "      <td>\"97000\"</td>\n",
+       "      <td>Rocky Mountain</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>4943000</td>\n",
+       "      <td>5037873</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11541369</td>\n",
+       "      <td>11723574</td>\n",
+       "      <td>11917655</td>\n",
+       "      <td>12095615</td>\n",
+       "      <td>12269211</td>\n",
+       "      <td>12428025</td>\n",
+       "      <td>12583415</td>\n",
+       "      <td>12741331</td>\n",
+       "      <td>12865778</td>\n",
+       "      <td>12976939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73584</th>\n",
+       "      <td>\"98000\"</td>\n",
+       "      <td>Far West</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>CAINC30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Population (persons) 3/</td>\n",
+       "      <td>Number of persons</td>\n",
+       "      <td>26635000</td>\n",
+       "      <td>27101402</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54652503</td>\n",
+       "      <td>55208367</td>\n",
+       "      <td>55738569</td>\n",
+       "      <td>56173821</td>\n",
+       "      <td>56477002</td>\n",
+       "      <td>56663305</td>\n",
+       "      <td>56772795</td>\n",
+       "      <td>56471258</td>\n",
+       "      <td>56414568</td>\n",
+       "      <td>56374151</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3200 rows × 63 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        GeoFIPS         GeoName Region TableName  LineCode  \\\n",
+       "7       \"00000\"   United States          CAINC30     100.0   \n",
+       "30      \"01000\"         Alabama      5   CAINC30     100.0   \n",
+       "53      \"01001\"     Autauga, AL      5   CAINC30     100.0   \n",
+       "76      \"01003\"     Baldwin, AL      5   CAINC30     100.0   \n",
+       "99      \"01005\"     Barbour, AL      5   CAINC30     100.0   \n",
+       "...         ...             ...    ...       ...       ...   \n",
+       "73492   \"94000\"          Plains    4.0   CAINC30     100.0   \n",
+       "73515   \"95000\"       Southeast    5.0   CAINC30     100.0   \n",
+       "73538   \"96000\"       Southwest    6.0   CAINC30     100.0   \n",
+       "73561   \"97000\"  Rocky Mountain    7.0   CAINC30     100.0   \n",
+       "73584   \"98000\"        Far West    8.0   CAINC30     100.0   \n",
+       "\n",
+       "      IndustryClassification               Description               Unit  \\\n",
+       "7                        ...   Population (persons) 3/  Number of persons   \n",
+       "30                       ...   Population (persons) 3/  Number of persons   \n",
+       "53                       ...   Population (persons) 3/  Number of persons   \n",
+       "76                       ...   Population (persons) 3/  Number of persons   \n",
+       "99                       ...   Population (persons) 3/  Number of persons   \n",
+       "...                      ...                       ...                ...   \n",
+       "73492                    ...   Population (persons) 3/  Number of persons   \n",
+       "73515                    ...   Population (persons) 3/  Number of persons   \n",
+       "73538                    ...   Population (persons) 3/  Number of persons   \n",
+       "73561                    ...   Population (persons) 3/  Number of persons   \n",
+       "73584                    ...   Population (persons) 3/  Number of persons   \n",
+       "\n",
+       "            1969       1970  ...       2014       2015       2016       2017  \\\n",
+       "7      201298000  203798722  ...  319257560  321815121  324353340  326608609   \n",
+       "30       3440000    3449846  ...    4887757    4909177    4931579    4953096   \n",
+       "53         25166      24606  ...      56062      56311      56979      57393   \n",
+       "76         56951      59474  ...     200910     205083     210148     215475   \n",
+       "99         23818      22655  ...      27012      26600      26186      25585   \n",
+       "...          ...        ...  ...        ...        ...        ...        ...   \n",
+       "73492   16202000   16349829  ...   21050417   21166271   21274183   21381319   \n",
+       "73515   43440000   43973515  ...   81195505   81974049   82827343   83580932   \n",
+       "73538   16328000   16621375  ...   39499579   40097127   40635623   41082659   \n",
+       "73561    4943000    5037873  ...   11541369   11723574   11917655   12095615   \n",
+       "73584   26635000   27101402  ...   54652503   55208367   55738569   56173821   \n",
+       "\n",
+       "            2018       2019       2020       2021       2022       2023  \n",
+       "7      328529577  330226227  331526933  332048977  333271411  334914895  \n",
+       "30       4977088    5003778    5031864    5050380    5073903    5108468  \n",
+       "53         57747      58251      58915      59203      59726      60342  \n",
+       "76        221187     227057     233227     239439     246531     253507  \n",
+       "99         25359      25187      24969      24533      24700      24585  \n",
+       "...          ...        ...        ...        ...        ...        ...  \n",
+       "73492   21474484   21561894   21624720   21662785   21684718   21763244  \n",
+       "73515   84228691   84843217   85429296   85951399   86798522   87677050  \n",
+       "73538   41504141   41978057   42504766   42942357   43528279   44102840  \n",
+       "73561   12269211   12428025   12583415   12741331   12865778   12976939  \n",
+       "73584   56477002   56663305   56772795   56471258   56414568   56374151  \n",
+       "\n",
+       "[3200 rows x 63 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "county_info[county_info['LineCode'] == 100]"
    ]
   },
   {
